--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Haribo recreation</title>
 </head>
 <body>
+    <header>
+    <nav>
+    <ul>
+    <li><a href="#">Products</a></li>
+    <li><a href="#">Recipies</a></li>
+    <li><a href="#">About us</a></li>
+    <li><a href="#">Career</a></li>
+    </ul>
+    </nav>
+</header>
+<main>
+    <section class="container">
+        <div class="slider-wrapper">
+            <div class="slider">
+                <img id="slide-1" src="images/Haribo 1.jpg" alt="Haribo image">
+                <img id="slide-2" src="images/haribo.jpg" alt="Haribo image">
+            </div>
+            <div class="slider-nav">
+                <a id="slide-1" href="#slide-1"></a>
+                <a href="#slide-2"></a>
+            </div>
+        </div>
+    </section>
+</main>
     
 </body>
 </html>
