commit index.html and main.css

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 </head>
 <body>
     <header>
-    <nav>
-    <ul>
-    <li><a href="#">Products</a></li>
-    <li><a href="#">Recipies</a></li>
-    <li><a href="#">About us</a></li>
-    <li><a href="#">Career</a></li>
-    </ul>
-    </nav>
+        <nav>
+        <ul>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Recipies</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Career</a></li>
+        </ul>
+    </nav>  
 </header>
 <main>
-    <section class="container">
+    <div class="container">
         <div class="slider-wrapper">
             <div class="slider">
                 <img id="slide-1" src="images/Haribo 1.jpg" alt="Haribo image">
@@ -29,8 +29,77 @@
                 <a href="#slide-2"></a>
             </div>
         </div>
-    </section>
+    </div>
+    <div class="haribo-section">
+            <div class="haribo-products">
+                <img id="haribo-image1" src="images/haribo-gumies.png" alt="haribo products">
+                <h2 class="haribo-text">Your global HARIBO favorites</h2>
+                <p class="haribo-text">Every country has it own range of HARIBO products. <br>But some are popular araund the globe  </p>
+                <a class="link" href="#">all favorites</a>
+            </div>
+            <div class="haribo-story">
+                <img id="haribo-image2" src="images/haribo-childs.png" alt="haribo history">
+                <h2 class="haribo-text">HARIBO´s unique success</h2>
+                <a class="link" href="#">Read more</a>
+            </div>
+    </div>
+    <div id="video-div">
+        <div>
+            <img id="image-video" src="images/video-image.png" alt="image from a haribo video">
+        </div>
+        <div id="image-video-text">
+            <h1>Happiness worldwide</h1>
+            <p>Kids and grown-ups love it so, the happy world of Haribo: a promise we <br>keep with our products in more than 100 countries.</p>
+        </div>
+    </div>
+    <div>
+        <div id="contact-text">
+            <h1 id="questions-title">Questions?<br> We are happy to help!</h1>
+            <p id="p-title">Our country contacts will be happy to answer any questions you may have. Simply get in touch with them now!</p>
+            <a id="a-title" href="#">Find your local contact</a>
+        </div>
+        <div id="image-contact-div">
+            <img id="image-contact" src="images/haribo-contact.png" alt="contact image">
+        </div>
+    </div>
+    <div id="haribo-tedys">
+        <div>
+            <img id="image-tedys" src="images/haribo-tedys.png" alt="image of haribo tedy gumies">
+        </div>
+        <div id="tedy-text">
+            <h1 id="h1-tedy">160 <br> million</h1>
+            <p id="p-tedy">The number of Goldbears we produce every day worldwide. We use the best ingredients, our original recipes and stringent checks everywhere: above all else, it’s quality that counts!</p>
+            <a id="a-tedy" href="#">Read More</a>
+        </div>
+    </div>
 </main>
-    
-</body>
+<footer>
+    <div class="footer-links">
+        <div class="column">
+            <a class="footer-a" href="#">Contact</a>
+            <a class="footer-a" href="#">Corporate responsibility</a>
+            <a class="footer-a" href="#">Informant system</a>
+            <a class="footer-a" href="#">Travel retail</a>
+        </div>
+
+        <div class="column">
+            <a class="footer-a" href="#">Imprint</a>
+            <a class="footer-a" href="#">Declaration of Accessibility</a>
+            <a class="footer-a" href="#">Privacy</a>
+            <a class="footer-a" href="#">Terms of use</a>
+            <a class="footer-a" href="#">Code of conduct</a>
+            
+        </div>
+        <div>
+        <img id="haribo-bear-image" src="images/haribo-bear.png" alt="haribo-bear">
+        </div>
+    </div>
+    <div id="copyright">
+        <p id="copyright-p">© 2025 HARIBO GmbH & Co. KG</p>
+    </div>
+    <div id="final-message">
+        <h1 id="final-message-p">Kids and grown-ups love it so, the happy world of Haribo!</h1>
+    </div>
+</footer>
+</body> 
 </html>
