commit final project

--- a/index.html
+++ b/index.html
@@ -9,20 +9,21 @@
 <body>
     <header>
         <nav>
-        <ul>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">Recipies</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Career</a></li>
+        <ul id="index-ul">
+            <li><a href="pages/products.html">Products</a></li>
+            <li><a href="pages/aboutus.html">About Us</a></li>
         </ul>
     </nav>  
+    <div id="haribo-nav">
+        <img src="images/haribo-nav.png" alt="haribo-nav">
+    </div>
 </header>
 <main>
     <div class="container">
         <div class="slider-wrapper">
             <div class="slider">
-                <img id="slide-1" src="images/Haribo 1.jpg" alt="Haribo image">
-                <img id="slide-2" src="images/haribo.jpg" alt="Haribo image">
+                <img id="slide-1" src="images/Haribo.jpg" alt="Haribo image">
+                <img id="slide-2" src="images/Haribo 1.jpg" alt="Haribo image">
             </div>
             <div class="slider-nav">
                 <a id="slide-1" href="#slide-1"></a>
@@ -35,7 +36,7 @@
                 <img id="haribo-image1" src="images/haribo-gumies.png" alt="haribo products">
                 <h2 class="haribo-text">Your global HARIBO favorites</h2>
                 <p class="haribo-text">Every country has it own range of HARIBO products. <br>But some are popular araund the globe  </p>
-                <a class="link" href="#">all favorites</a>
+                <a class="link" href="pages/products.html">all favorites</a>
             </div>
             <div class="haribo-story">
                 <img id="haribo-image2" src="images/haribo-childs.png" alt="haribo history">
@@ -49,7 +50,7 @@
         </div>
         <div id="image-video-text">
             <h1>Happiness worldwide</h1>
-            <p>Kids and grown-ups love it so, the happy world of Haribo: a promise we <br>keep with our products in more than 100 countries.</p>
+            <p>Kids and grown-ups love it so, the happy world of Haribo:  a promise we <br>keep with our products in more than 100 countries.</p>
         </div>
     </div>
     <div>
